exports[`Component > Panel Body renders correctly 1`] = `
<div
  className="panel-body">
  Body text
</div>
`;

exports[`Component > Panel Heading renders correctly 1`] = `
<div
  className="panel-heading clearfix ">
  Heading text
</div>
`;

exports[`Component > Panel Panel renders correctly 1`] = `
<div
  className="panel panel-default">
  Panel text
</div>
`;
